src/sap.m/src/sap/m/themes/base/GenericTile.less
/* ... */
.OneByOne.sapMTileSmallPhone.tileWithAppInfo {

	.sapMGTHdrContent.OneByOne {
		height: 3rem;
	}

	.sapMGTContent {

		.sapMGTTInfoContainer{

			.sapMGTTInfo {
				margin-bottom: 0.5rem;
				padding-right: 0.5rem;
			}
		}
	}

	.sapMGTContent.appInfoWithFooter {

		.sapMTileCnt {
			height: 3rem;

			.sapMTileCntContent {

				.sapMImageContent {

					.sapMImageContentImageIcon {
						top: -0.1rem;
					}
				}
			}
		}

		.sapMNCValue {
			margin-bottom: 0.3rem;

			.sapMNCLargeFontSize {
				padding: 0;
			}

			.sapMNCLargeFontSize.sapMNCIconImage {
				padding-right: 0.375rem;
			}
		}
	}

	.sapMGTContent.appInfoWithoutFooter {

		.sapMTileCnt {
			height: 3rem;
		}

		.sapUiIcon {
			top: 0;
		}

		.sapMNCInner.WithoutMargin {
			top: 0;
		}
	}

	.appInfoWithoutTileCnt {

		.sapMGTTInfoContainer {

			.sapMGTTInfo {
				margin-bottom: 0.3rem;
			}
		}
	}

	.sapUiIcon.sapUiIconMirrorInRTL.sapMImageContentImageIcon {
		margin-bottom: 0.25rem;
	}
}

.TwoByHalf.tileWithAppInfo {

	.sapMGTWrapper {
		height: inherit;
		display: flex;
		justify-content: space-between;
		gap: 0.25rem;

		.sapMGTWrapperCnt {

			.sapMGTHdrContent {
				max-width: 13.5rem;
				padding-right: 0;
			}

			.sapMGTContent {

				.sapMTileCnt {

					.sapMTileCntContent {
						padding-right: 0;
					}
				}
			}
		}
	}

	.sapMGTTInfoContainer {
		max-width: 13.5rem;

		.sapMGTTInfo {

			.sapMGTAppShortcutText {

				.sapMText {
					max-width: 13ch;
				}
			}
			.sapMGTSystemInfoText {

				.sapMText {
					max-width: 13ch;
					padding-left: 0.2rem;
				}
			}
		}
	}
}

.TwoByOne.tileWithAppInfo {

	.sapMGTContent {

		.sapMGTTInfoContainer {

			.sapMGTTInfo {
				max-width: 10.875rem;
			}
		}
	}

	.sapMGTContent {
		display: flex;
		justify-content: space-between;
		margin-top: 0.5rem;

		.sapMTileCnt {

			.sapMTileCntContent {
				padding-right: 0;
			}

			.sapMTileCntFtrTxt {
				margin-right: 0;
			}
		}
	}

	.appInfoWithoutTileCnt {
		flex-direction: row-reverse;
	}

	.sapMGTTInfoContainer {
		max-width: 10.875rem;
		margin-left: 0.25rem;
		margin-bottom: 0.5rem;

		.sapMGTTInfo {

			.sapMGTAppShortcutText {
				text-align: right;
			}
		}
	}
}

.OneByHalf {

	.sapMGTHdrContent {
		height: 1.25rem;

		.sapMGTHdrTxt {

			.sapMText {
				display: block;
			}
		}
	}

	.sapMGTContent {
		height: 3rem;

		.sapMTileCnt {
			height: 100%;

			.sapMTileCntContent {
				height: 2.5rem;

				.sapMNCLargeFontSize {
					font-size: 1.5rem;
					padding-bottom: 0.55rem;
					height: auto;
					align-self: flex-end;
				}

				.sapMNCIndScale.sapMNCLargeFontSize {
					padding: 0.375rem 0 0.65rem 0.25rem;
				}

				.sapMImageContent {
					display: none;
				}
			}

			.sapMTileCntContent > div:first-child {
				height: 100%;
			}
		}
	}
}

.TwoByHalf {

	.sapMGTHdrContent {
		height: 1.25rem;

		.sapMGTHdrTxt {

			.sapMText {
				display: block;
			}
		}
	}

	.sapMGTContent {
		height: 3rem;

		.sapMTileCnt {
			height: 100%;

			.sapMTileCntContent {
				height: 2.5rem;

				.sapMNCLargeFontSize {
					font-size: 1.5rem;
					padding-bottom: 0.55rem;
					height: auto;
					align-self: flex-end;
				}

				.sapMNCIndScale.sapMNCLargeFontSize {
					padding: 0.375rem 0 0.65rem 0.25rem;
				}

				.sapMImageContentImageIcon {
					max-height: 1.75rem;
					bottom: auto;
				}
			}

			.sapMTileCntContent > div:first-child {
				height: 100%;
			}
		}
	}
}

.sapMGTHdrTxt,
.sapMGTHdrTxt > .sapMGTTitle,
.sapMGTSubHdrTxt,
.sapMGT .sapMGTContent {
	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: -moz-none;
}

.sapMGTHdrTxt > .sapMGTTitle,
.sapMGenericTileFtrFldTxt>.sapMGTFailed,
.sapMTileCntFtrFldTxt>.sapMGTFailed {
	cursor: inherit;
}

.sapMGTInnrCnt {
	display: inline-block;
}

.sapMGTContent {
	height: 6.375rem;
	display: inline-block;
	white-space: nowrap;
	width: 100%;
	overflow: hidden;
}

.sapMGTHdrTxt {
	overflow: hidden;

	.sapMText {
		display: inline;
	}
}

/* added line height so that it is not overridden by other controls. */
.sapMGT {

	.sapMText {
		line-height: normal;
	}
}

.sapMGTHdrTxt > .sapMText {
	color: var(--sapTile_TitleTextColor);
	font-weight: normal;
	font-family: var(--sapFontFamily);
	font-size: var(--sapFontHeader5Size);
}

.sapMGTSubHdrTxt > .sapMText,
.sapMGTSubHdrTxt {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	font-family: var(--sapFontFamily);
	font-size: @sapMFontMediumSize;
	font-weight: normal;
	color: var(--sapTile_TextColor);
}

.sapMGTHdrContent {
	height: 3.625rem;
	padding-top: 1rem;
	padding-left: 1rem;
	padding-right: 1rem;
}

.OneByOne.tileWithAppInfo {

	.sapMGTHdrContent.OneByOne {
		height: 3.4rem;
	}
}

.sapMGTHdrContent.Stretch {
	height: 42%;
	padding-top: 0;
}

.sapMGT.sapMGTBackgroundImage.Stretch {

	.sapMGTContent {
		height: 58%;
		margin-top: 1px;
	}
}

.sapMGTHdrIconImage {
	float: right;
	width: 2.5rem;
	min-height: 2.5rem;
	font-size: 2.5rem;
	font-family: var(--sapFontHeaderFamily);
	font-weight: @sapUiFontHeaderWeight;
	color: var(--sapTile_IconColor);
}

.sapMGenericTileFtrFldTxt,
.sapMTileCntFtrFldTxt {
	font-family: var(--sapFontFamily);
	font-size: var(--sapFontSmallSize);
	color: var(--sapTile_TextColor);
}

.sapMGenericTileFtrFldIcn,
.sapMTileCntFtrFldIcn {
	color: var(--sapTile_TextColor);
}

.sapMGT:focus:not([tabindex]) {
	border-color: transparent;
}

.sapMGTOverlay {
	background-color: var(--sapTile_Background);
	border-radius: var(--sapTile_BorderCornerRadius);
}

.sapMGTOverlayMixin(@offset: 0px, @z-index: 0) {
	position: absolute !important;
	pointer-events: none;
	left: @offset;
	top: @offset;
	right: @offset;
	bottom: @offset;

	& when not (@z-index = 0) {
		z-index: @z-index;
	}
}
/* ... */

